2011-07-13 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-05-62
	* Include MessageLoggerDialog changes.	(Andrea).

2011-07-13 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-05-61
	* Remove ClassCastException passing the mouse over module nodes. bug 84305
	* Set empty scalar parameter to "None" by default in Python converter. bug 84064
	* Add "Clone Module" feature for Paths and Sequences. (bug/feature 83912).

2011-07-07 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-05-60
	* "Deep Import" considers out of order items.
	* Fixes some minor errors regarding to "Deep Import". 

2011-07-05 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-05-59
	* Big Fix: Update EventContents when renaming and creating Streams. bug 83721
	* Add "Deep Import" feature for Paths and Sequences.

2011-06-29  Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-05-58
	* Bug fix in replace Sequence/Path: if parent already contains the new
	  Sequence/Path and thus after replace it is occuring twice, then the
	  the earlier occurance is kept while the later occurance is removed.

2011-06-27 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-05-57
	* Change "Update all existing ESModules" to "Import all ESModules".
	* Add "Update all existing Modules".
	* Remove some unreachable code in ConfigurationTreeActions.java
	
2011-06-23 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-05-56
	* Bug fix: Fixes selection path errors. (bug 76145).
	* Fixes Import errors: Forces update the tree model to avoid 
	  ArrayIndexOutOfBoundsException.
	* Added a new progress bar dialog which is also customisable and
	  reusable for long processes.
	* Improvements to ImportAll functionality. (avoiding model updates). 
	  
2011-06-10 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-05-55
	* Present only imported items differences after importing them. (bug/feature 83085).		